<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20C5D3"
    tools:context=".controller.fragment.TicTacToeFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/title_tic_tac"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TableLayout
        android:id="@+id/table_tic_tac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setButtonsText"
                android:textSize="36sp"
                tools:text="@string/X" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setButtonsText"
                android:textSize="36sp"
                tools:text="@string/X" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setButtonsText"
                android:textSize="36sp"
                tools:text="@string/X" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setButtonsText"
                android:textSize="36sp"
                tools:text="@string/X" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setButtonsText"
                android:textSize="36sp"
                tools:text="@string/X" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setButtonsText"
                android:textSize="36sp"
                tools:text="@string/X" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setButtonsText"
                android:textSize="36sp"
                tools:text="@string/X" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setButtonsText"
                android:textSize="36sp"
                tools:text="@string/X" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setButtonsText"
                android:textSize="36sp"
                tools:text="@string/X" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button_tic_tac_try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="20dp"
        android:text="@string/button_try_again"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:visibility="gone"
        tools:visibility="visible" />

</FrameLayout>